--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@briebug/cypress-schematic": "^3.3.0",
     "@capacitor/core": "2.2.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -37,13 +38,15 @@
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
     "@capacitor/cli": "2.2.0",
+    "@cypress/webpack-preprocessor": "5.4.1",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "cypress": "4.8.0",
     "jest": "^26.0.1",
     "jest-preset-angular": "8.2.0",
-    "protractor": "~5.4.3",
+    "ts-loader": "7.0.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
