--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "luxon": "^1.24.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -41,6 +42,7 @@
     "@cypress/webpack-preprocessor": "5.4.1",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jest": "^26.0.0",
+    "@types/luxon": "^1.24.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "cypress": "4.8.0",
