--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@capacitor/cli": "2.2.0",
     "@cypress/webpack-preprocessor": "5.4.1",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "3.1.7",
     "@types/jest": "^26.0.0",
     "@types/luxon": "^1.24.0",
     "@types/node": "^12.11.1",
